[project]
name = "tllm"
version = "0.1.0"
description = "A tiny inference server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.12.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.37.0",
]
authors = [
    {name = "Rathul Anand", email = "rathul@g.ucla.edu"}
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "httpx>=0.28.1",
]
